syntax = "proto3";
package com.tophap.mapbox_gl.proto;
option java_package = "com.tophap.mapbox_gl.proto";
option java_outer_classname = "LayersOperations";

import "util.proto";
import "layers.proto";
import "google/protobuf/wrappers.proto";

message Operations {
  message Add {
    Layer layer = 1;
    oneof position {
      string below_id = 2;
      string above_id = 3;
      int32 index = 4;
    }
  }

  message Update {
    string id = 1;
    oneof type {
      Background background_layer = 2;
      Circle circle_layer = 3;
      Fill fill_layer = 4;
      FillExtrusion fill_extrusion_layer = 5;
      Line line_layer = 6;
      Symbol symbol_layer = 7;
      Hillshade hillshade_layer = 8;
      Heatmap heatmap_layer = 9;
    }

    message Background {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      google.protobuf.Int32Value color = 4;
      google.protobuf.StringValue pattern = 5;
      google.protobuf.FloatValue opacity = 6;
      TransitionOptions color_transition = 7;
      TransitionOptions pattern_transition = 8;
      TransitionOptions opacity_transition = 9;
    }

    message Circle {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      google.protobuf.FloatValue radius = 4;
      google.protobuf.Int32Value color = 5;
      google.protobuf.FloatValue blur = 6;
      google.protobuf.FloatValue opacity = 7;
      repeated float translate = 8;
      bool has_translate = 9;
      TranslateAnchor translate_anchor = 10;
      bool has_translate_anchor = 11;
      TranslateAnchor pitch_scale = 12;
      bool has_pitch_scale = 13;
      TranslateAnchor pitch_alignment = 14;
      bool has_pitch_alignment = 15;
      google.protobuf.FloatValue stroke_width = 16;
      google.protobuf.Int32Value stroke_color = 17;
      google.protobuf.FloatValue stroke_opacity = 18;
      TransitionOptions radius_transition = 19;
      TransitionOptions color_transition = 20;
      TransitionOptions blur_transition = 21;
      TransitionOptions opacity_transition = 22;
      TransitionOptions translate_transition = 23;
      TransitionOptions stroke_width_transition = 24;
      TransitionOptions stroke_color_transition = 25;
      TransitionOptions stroke_opacity_transition = 26;
    }

    message FillExtrusion {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      google.protobuf.FloatValue opacity = 4;
      google.protobuf.Int32Value color = 5;
      repeated float translate = 6;
      bool has_translate = 7;
      TranslateAnchor translate_anchor = 8;
      bool has_translate_anchor = 9;
      google.protobuf.StringValue pattern = 10;
      google.protobuf.FloatValue height = 11;
      google.protobuf.FloatValue base = 12;
      google.protobuf.BoolValue vertical_gradient = 13;
      TransitionOptions opacity_transition = 14;
      TransitionOptions color_transition = 15;
      TransitionOptions translate_transition = 16;
      TransitionOptions pattern_transition = 17;
      TransitionOptions height_transition = 18;
      TransitionOptions base_transition = 19;
    }

    message Fill {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      google.protobuf.BoolValue antialias = 4;
      google.protobuf.FloatValue opacity = 5;
      google.protobuf.Int32Value color = 6;
      google.protobuf.Int32Value outline_color = 7;
      repeated float translate = 8;
      bool has_translate = 9;
      TranslateAnchor translate_anchor = 10;
      bool has_translate_anchor = 11;
      google.protobuf.StringValue pattern = 12;
      TransitionOptions opacity_transition = 13;
      TransitionOptions color_transition = 14;
      TransitionOptions outline_color_transition = 15;
      TransitionOptions translate_transition = 16;
      TransitionOptions pattern_transition = 17;
    }

    message Heatmap {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      google.protobuf.FloatValue radius = 4;
      google.protobuf.FloatValue weight = 5;
      google.protobuf.FloatValue intensity = 6;
      google.protobuf.Int32Value color = 7;
      google.protobuf.FloatValue opacity = 8;
      TransitionOptions radius_transition = 9;
      TransitionOptions intensity_transition = 10;
      TransitionOptions opacity_transition = 11;
    }

    message Hillshade {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      google.protobuf.FloatValue illumination_direction = 4;
      TranslateAnchor illumination_anchor = 5;
      bool has_illumination_anchor = 6;
      google.protobuf.FloatValue exaggeration = 7;
      google.protobuf.Int32Value shadow_color = 8;
      google.protobuf.Int32Value highlight_color = 9;
      google.protobuf.Int32Value accent_color = 10;
      TransitionOptions exaggeration_transition = 11;
      TransitionOptions shadow_color_transition = 12;
      TransitionOptions highlight_color_transition = 13;
      TransitionOptions accent_color_transition = 14;
    }

    message Line {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      Layer.Line.Cap cap = 4;
      bool has_cap = 5;
      Layer.Line.Join join = 6;
      bool has_join = 7;
      google.protobuf.FloatValue miter_limit = 8;
      google.protobuf.FloatValue round_limit = 9;
      google.protobuf.FloatValue opacity = 10;
      google.protobuf.Int32Value color = 11;
      repeated float translate = 12;
      bool has_translate = 13;
      TranslateAnchor translate_anchor = 14;
      bool has_translate_anchor = 15;
      google.protobuf.FloatValue width = 16;
      google.protobuf.FloatValue gap_width = 17;
      google.protobuf.FloatValue offset = 18;
      google.protobuf.FloatValue blur = 19;
      repeated float dasharray = 20;
      bool has_dasharray = 21;
      google.protobuf.StringValue pattern = 22;
      google.protobuf.Int32Value gradient = 23;
      TransitionOptions opacity_transition = 24;
      TransitionOptions color_transition = 25;
      TransitionOptions translate_transition = 26;
      TransitionOptions width_transition = 27;
      TransitionOptions gap_width_transition = 28;
      TransitionOptions offset_transition = 29;
      TransitionOptions blur_transition = 30;
      TransitionOptions dasharray_transition = 31;
      TransitionOptions pattern_transition = 32;
    }

    message Symbol {
      google.protobuf.BoolValue visible = 1;
      google.protobuf.FloatValue min_zoom = 2;
      google.protobuf.FloatValue max_zoom = 3;
      Layer.Symbol.Placement symbol_placement = 4;
      bool has_symbol_placement = 5;
      google.protobuf.FloatValue symbol_spacing = 6;
      google.protobuf.BoolValue symbol_avoid_edges = 7;
      Layer.Symbol.ZOrder symbol_z_order = 8;
      bool has_symbol_z_order = 9;
      google.protobuf.BoolValue icon_allow_overlap = 10;
      google.protobuf.BoolValue icon_ignore_placement = 11;
      google.protobuf.BoolValue icon_optional = 12;
      Layer.Symbol.Alignment icon_rotation_alignment = 13;
      bool has_icon_rotation_alignment = 14;
      google.protobuf.FloatValue icon_size = 15;
      Layer.Symbol.TextFit icon_text_fit = 16;
      bool has_icon_text_fit = 17;
      repeated float icon_text_fit_padding = 18;
      bool has_icon_text_fit_padding = 19;
      google.protobuf.StringValue icon_image = 20;
      google.protobuf.FloatValue icon_rotate = 21;
      google.protobuf.FloatValue icon_padding = 22;
      google.protobuf.BoolValue icon_keep_upright = 23;
      repeated float icon_offset = 24;
      bool has_icon_offset = 25;
      PositionAnchor icon_anchor = 26;
      bool has_icon_anchor = 27;
      Layer.Symbol.Alignment icon_pitch_alignment = 28;
      bool has_icon_pitch_alignment = 29;
      Layer.Symbol.Alignment text_pitch_alignment = 30;
      bool has_text_pitch_alignment = 31;
      Layer.Symbol.Alignment text_rotation_alignment = 32;
      bool has_text_rotation_alignment = 33;
      repeated FormattedSection text_field = 34;
      bool has_text_field = 35;
      repeated string text_font = 36;
      bool has_text_font = 37;
      google.protobuf.FloatValue text_size = 38;
      google.protobuf.FloatValue text_max_width = 39;
      google.protobuf.FloatValue text_line_height = 40;
      google.protobuf.FloatValue text_letter_spacing = 41;
      Layer.Symbol.TextJustify text_justify = 42;
      bool has_text_justify = 43;
      google.protobuf.FloatValue text_radial_offset = 44;
      repeated PositionAnchor text_variable_anchor = 45;
      bool has_text_variable_anchor = 46;
      PositionAnchor text_anchor = 47;
      bool has_text_anchor = 48;
      google.protobuf.FloatValue text_max_angle = 49;
      google.protobuf.FloatValue text_rotate = 50;
      google.protobuf.FloatValue text_padding = 51;
      google.protobuf.BoolValue text_keep_upright = 52;
      Layer.Symbol.TextTransform text_transform = 53;
      bool has_text_transform = 54;
      repeated float text_offset = 55;
      bool has_text_offset = 56;
      google.protobuf.BoolValue text_allow_overlap = 57;
      google.protobuf.BoolValue text_ignore_placement = 58;
      google.protobuf.BoolValue text_optional = 59;
      google.protobuf.FloatValue icon_opacity = 60;
      google.protobuf.Int32Value icon_color = 61;
      google.protobuf.Int32Value icon_halo_color = 62;
      google.protobuf.FloatValue icon_halo_width = 63;
      google.protobuf.FloatValue icon_halo_blur = 64;
      repeated float icon_translate = 65;
      bool has_icon_translate = 66;
      TranslateAnchor icon_translate_anchor = 67;
      bool has_icon_translate_anchor = 68;
      google.protobuf.FloatValue text_opacity = 69;
      google.protobuf.Int32Value text_color = 70;
      google.protobuf.Int32Value text_halo_color = 71;
      google.protobuf.FloatValue text_halo_width = 72;
      google.protobuf.FloatValue text_halo_blur = 73;
      repeated float text_translate = 74;
      bool has_text_translate = 75;
      TranslateAnchor text_translate_anchor = 76;
      bool has_text_translate_anchor = 77;
      TransitionOptions icon_opacity_transition = 78;
      TransitionOptions icon_color_transition = 79;
      TransitionOptions icon_halo_color_transition = 80;
      TransitionOptions icon_halo_width_transition = 81;
      TransitionOptions icon_halo_blur_transition = 82;
      TransitionOptions icon_translate_transition = 83;
      TransitionOptions text_opacity_transition = 84;
      TransitionOptions text_color_transition = 85;
      TransitionOptions text_halo_color_transition = 86;
      TransitionOptions text_halo_width_transition = 87;
      TransitionOptions text_halo_blur_transition = 88;
      TransitionOptions text_translate_transition = 89;
    }
  }
}
